vim, tmux: color reset

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -2,7 +2,7 @@ set -g history-limit 65535
 set -g display-time 4000
 set -g focus-events on
 setw -g aggressive-resize on
-set -g default-terminal "screen-256color"
+set -g default-terminal "xterm"
 set -g set-titles on
 set -g set-titles-string "#W"
 set -g monitor-activity on
@@ -21,25 +21,25 @@ setw -g pane-base-index 1
 #set -g word-separators " /@,=\"-"
 
 # default statusbar colors
-set-option -g status-style bg=colour15,fg=colour0
+set-option -g status-style bg=colour0,fg=colour15
 # default window title colors
-set-window-option -g window-status-style fg=colour7,bg=colour15
+set-window-option -g window-status-style fg=colour8,bg=colour0
 # active window title colors
-set-window-option -g window-status-current-style fg=colour0,bg=colour15
+set-window-option -g window-status-current-style fg=colour15,bg=colour0
 # inactive window activity colors
-set-window-option -g window-status-activity-style fg=colour8,bg=colour15
-set-window-option -g window-status-bell-style fg=colour11,bg=colour15
+set-window-option -g window-status-activity-style fg=colour7,bg=colour0
+set-window-option -g window-status-bell-style fg=colour11,bg=colour0
 
 # pane border
-set-option -g pane-border-style fg=colour7
+set-option -g pane-border-style fg=colour8
 set-option -g pane-active-border-style fg=colour12
 
 # message text
-set-option -g message-style bg=colour15,fg=colour0
+set-option -g message-style bg=colour0,fg=colour15
 
 # pane number display
-set-option -g display-panes-active-colour colour0
-set-option -g display-panes-colour colour8
+set-option -g display-panes-active-colour colour15
+set-option -g display-panes-colour colour7
 
 # clock
 set-window-option -g clock-mode-colour colour12
