--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -21,28 +21,28 @@ setw -g pane-base-index 1
 #set -g word-separators " /@,=\"-"
 
 # default statusbar colors
-set-option -g status-style bg=colour0,fg=colour15
+set-option -g status-style bg=black,fg=brightwhite
 # default window title colors
-set-window-option -g window-status-style fg=colour8,bg=colour0
+set-window-option -g window-status-style fg=brightblack,bg=black
 # active window title colors
-set-window-option -g window-status-current-style fg=colour15,bg=colour0
+set-window-option -g window-status-current-style fg=brightwhite,bg=black
 # inactive window activity colors
-set-window-option -g window-status-activity-style fg=colour7,bg=colour0
-set-window-option -g window-status-bell-style fg=colour11,bg=colour0
+set-window-option -g window-status-activity-style fg=white,bg=black
+set-window-option -g window-status-bell-style fg=brightyellow,bg=black
 
 # pane border
-set-option -g pane-border-style fg=colour8
-set-option -g pane-active-border-style fg=colour12
+set-option -g pane-border-style fg=brightblack
+set-option -g pane-active-border-style fg=brightblue
 
 # message text
-set-option -g message-style bg=colour0,fg=colour15
+set-option -g message-style bg=black,fg=brightwhite
 
 # pane number display
-set-option -g display-panes-active-colour colour15
-set-option -g display-panes-colour colour7
+set-option -g display-panes-active-colour brightwhite
+set-option -g display-panes-colour white
 
 # clock
-set-window-option -g clock-mode-colour colour12
+set-window-option -g clock-mode-colour brightblue
 
 # better vi-like bindings
 set -g mode-keys vi
