tmux: fix scroll issue

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,7 +1,7 @@
-set -g history-limit 65535
+set -g history-limit 8192
 set -g display-time 4000
 set -g focus-events on
-setw -g aggressive-resize on
+setw -g aggressive-resize off
 set -g default-terminal "xterm"
 set -g set-titles on
 set -g set-titles-string "#W"
@@ -18,7 +18,7 @@ setw -g window-status-current-format " #W "
 setw -g window-status-format " #W "
 set -g base-index 1
 setw -g pane-base-index 1
-#set -g word-separators " /@,=\"-"
+set -g word-separators " /@,=\"-"
 
 # default statusbar colors
 set-option -g status-style bg=black,fg=brightwhite
