--- a/fvwm/.fvwm/config
+++ b/fvwm/.fvwm/config
@@ -4,7 +4,7 @@ EdgeResistance 250
 Style * EdgeMoveDelay 250, EdgeMoveResistance 250
 ClickTime 600
 
-DefaultFont "xft:Sans:Bold:size=6:antialias=True"
+DefaultFont "xft:JetBrains Mono:Bold:size=6:antialias=True"
 
 # Sets all windows to OpaqueMove (vs a wired frame) and  windows will
 # snap to each other and the edge of the screen.
@@ -20,7 +20,7 @@ IgnoreModifiers L25
 
 DeskTopSize 2x1
 Menustyle * fvwm, Font -adobe-times-bold-r-*-*-14-*-*-*-*-*-*-*
-MenuStyle * Foreground maroon, Background grey60, Greyed grey40
+MenuStyle * Foreground black, Background grey60, Greyed grey40
 
 ColormapFocus FollowsMouse
 
@@ -30,7 +30,7 @@ ColormapFocus FollowsMouse
 Style *           IconFont -adobe-times-bold-r-*-*-18-*-*-*-*-*-*-*
 Style *           HilightFore black, HilightBack Gray60
 Style *           BorderWidth 6, HandleWidth 6
-Style *            IconSize 64 64
+Style *           IconSize 64 64
 Style *           Icon unknown1.xpm, Color lightgrey/dimgrey
 Style *           MWMFunctions, MWMDecor, HintOverride
 Style *           DecorateTransient, !UsePPosition
@@ -403,7 +403,7 @@ AddToFunc ChangeDefaultFocus I Style * $0
 ## Mostly, you don't have to specify icon files, as FvwmIconBox now
 ## reads icon files specified in Style commands.
 ##
-*FvwmIconBox            "Fvwm*"         -
+#*FvwmIconBox            "Fvwm*"         -
 #
 ## FvwmForm alias - rlogin or telnet to host via xterm
 #*Rlogin: WarpPointer
