--- a/fvwm/.fvwm/config
+++ b/fvwm/.fvwm/config
@@ -35,7 +35,7 @@ Style *           IconSize 128 128
 #Style *           Icon unknown1.xpm, Color lightgrey/dimgrey
 Style *           MWMFunctions, MWMDecor, HintOverride
 Style *           DecorateTransient, !UsePPosition
-Style *           IconBox 10 10 -10 -10
+Style *           IconBox 24 24 -24 -24, IconGrid 128 92, IconFill r b
 Style *           FocusFollowsMouse
 Style *           TileCascadePlacement
 
@@ -295,6 +295,7 @@ AddToFunc DeThumbnail
 + I DestroyWindowStyle
 + I Exec rm -f $HOME/.fvwm/icon.tmp.$[w.id].png
 + I Iconify
++ I All (Iconic) PlaceAgain Icon
 ################### FvwmButtons button-bar ################################
 #*FvwmButtons: Geometry 520x100-1-1
 #*FvwmButtons: Back bisque3
