--- a/fvwm/.fvwm/config
+++ b/fvwm/.fvwm/config
@@ -21,10 +21,10 @@ Style * BorderWidth 6, HandleWidth 6
 Style * IconSize 256 256
 Style * IconBox 32 32 -32 -32, IconGrid 32 32, IconFill r b
 Style * DecorateTransient, !UsePPosition
-Style * FocusFollowsMouse
+Style * ClickToFocus
 Style * TileCascadePlacement
 
-Style xclock NoTitle
+Style xclock NoTitle, StaysOnBottom
 
 MenuStyle * fvwm, Font "xft:JetBrains Mono:pixelsize=14:antialias=True"
 MenuStyle * Foreground black, Background grey60, Greyed grey40
@@ -73,7 +73,9 @@ ButtonStyle 4 Vector 8 40x20@1 40x50@1 20x50@1 50x80@1 80x50@0 60x50@0 60x20@0 4
 ######################## Menus ###################
 AddToMenu RootMenu "Root Menu" Title
 + "XTerm" Exec exec xterm -ai
++ "Kitty" Exec exec kitty
 + "Firefox" Exec exec firefox
++ "" Nop
 + "Fvwm Modules" Popup Module-Popup
 + "Fvwm Window Ops" Popup Window-Ops
 + "Fvwm Simple Config Ops" Popup Misc-Ops
@@ -204,8 +206,9 @@ AddToFunc Thumbnail
  "xwd -silent -id $[w.id] | convert -thumbnail 256x192 -quality 0 \
   xwd:- png:$[HOME]/.fvwm/icon.tmp.$[w.id].png"
 + I Iconify
-+ I ThisWindow WindowStyle IconOverride, Icon $[HOME]/.fvwm/icon.tmp.$[w.id].png, StaysOnBottom
++ I ThisWindow WindowStyle IconOverride, Icon $[HOME]/.fvwm/icon.tmp.$[w.id].png
 + I PlaceAgain Icon
++ I Lower
 
 DestroyFunc DeThumbnail
 AddToFunc DeThumbnail
