--- a/fvwm/.fvwm/config
+++ b/fvwm/.fvwm/config
@@ -220,7 +220,8 @@ Style * BorderColorset 3, HilightBorderColorset 4
 
 # Disable Icons from appearing on desktop.
 # Comment this out or use Style * Icon to get the icons back.
-Style * !Icon
+#Style * !Icon
+Style * IconBox 32 32 -32 -32, IconGrid 64 64, IconFill l b
 
 # Window Specific Styles
 Style RightPanel !Title, !Borders, !Handles, Sticky, \
@@ -504,7 +505,7 @@ Mouse 3 I    A Menu MenuIconOps
 #   4 - Maximize
 #   6 - Minimize
 ###########
-TitleStyle Centered Height 32 -- Flat
+TitleStyle LeftJustified Height 32 -- Flat
 ButtonStyle All ActiveUp Vector 5 15x15@4 15x85@3 85x85@3 85x15@3 \
                 15x15@3 -- Flat
 ButtonStyle All ToggledActiveUp Vector 5 15x15@4 15x85@3 85x85@3 \
