--- a/fvwm/.fvwm/config
+++ b/fvwm/.fvwm/config
@@ -55,7 +55,7 @@
 # actions that are run after a restart.
 DestroyFunc StartFunction
 AddToFunc   StartFunction
-+ I Exec exec fvwm-root $[FVWM_USERDIR]/wallpaper.png
+#+ I Exec exec fvwm-root $[FVWM_USERDIR]/wallpaper.png
 #+ I Test (Init, f $[FVWM_USERDIR]/.BGdefault) \
 #    Exec exec fvwm-root $[FVWM_USERDIR]/.BGdefault
 #+ I TestRc (NoMatch) Exec exec fvwm-root \
@@ -337,7 +337,7 @@ AddToMenu   MenuWindowOps
 + "Stick"     Stick
 + "" Nop
 + "Close"     Close
-+ "More..."   Menu MenuWindowOpsLong This 0 0
++ "More..."   Menu MenuWindowOpsLong Button2 0 32p
 
 DestroyMenu MenuWindowOpsLong
 AddToMenu   MenuWindowOpsLong
@@ -471,12 +471,12 @@ Silent Key F4 A C GotoDesk 0 3
 #   2 - Close on single click, Destory on double click.
 #   4 - Maximize (right/middle button will only maximize vertical/horizontal)
 #   6 - Iconify (minimize)
-Mouse 1 1 A Menu MenuWindowOps Delete
-Mouse 1 2 A Close
-Mouse 1 4 A Maximize 100 100
-Mouse 2 4 A Maximize 0 100
-Mouse 3 4 A Maximize 100 0
-Mouse 1 6 A Thumbnail
+Mouse 1 2 A Menu MenuWindowOps Delete
+Mouse 1 1 A Close
+Mouse 1 3 A Maximize 100 100
+Mouse 2 3 A Maximize 0 100
+Mouse 3 3 A Maximize 100 0
+Mouse 1 5 A Thumbnail
 
 #   TitleBar: Click to Raise, Move, Double Click to Maximize
 #             Mouse Wheel Up/Down to WindowShade On/Off
@@ -507,30 +507,20 @@ Mouse 3 I    A Menu MenuIconOps
 #   4 - Maximize
 #   6 - Minimize
 ###########
-TitleStyle LeftJustified Height 32 -- Flat
-ButtonStyle All ActiveUp Vector 5 15x15@4 15x85@3 85x85@3 85x15@3 \
-                15x15@3 -- Flat
-ButtonStyle All ToggledActiveUp Vector 5 15x15@4 15x85@3 85x85@3 \
-                85x15@3 15x15@3 -- Flat
-ButtonStyle All ActiveDown Vector 5 20x20@4 20x80@3 80x80@3 80x20@3 \
-                20x20@3 -- Flat
-ButtonStyle All ToggledActiveDown Vector 5 20x20@4 20x80@3 80x80@3 \
-                80x20@3 20x20@3 -- Flat
-ButtonStyle All ToggledInactive Vector 5 47x47@3 57x53@3 53x53@3 \
-                53x47@3 47x47@3 -- Flat
-ButtonStyle All Inactive Vector 5 47x47@3 57x53@3 53x53@3 53x47@3 \
-                47x47@3 -- Flat
-AddButtonStyle 1 Active Vector 5 45x45@3 55x45@3 55x55@3 45x55@3 45x45@3
-AddButtonStyle 2 Active Vector 4 35x35@3 65x65@3 65x35@4 35x65@3
-AddButtonStyle 4 Active Vector 8 30x70@3 30x30@3 70x30@3 70x70@3 30x70@3 \
-                 30x50@4 50x50@3 50x70@3
-AddButtonStyle 4 ToggledActiveUp Vector 8 30x70@3 30x30@3 70x30@3 70x70@3 \
-                 30x70@3 50x30@4 50x50@3 70x50@3
-AddButtonStyle 6 Active Vector 5 35x60@3 65x60@3 65x50@3 35x50@3 35x60@3
+TitleStyle LeftJustified Height 32
 ButtonStyle All - Clear
-ButtonStyle 1 - MwmDecorMenu
-ButtonStyle 4 - MwmDecorMax
-ButtonStyle 6 - MwmDecorMin
+
+AddButtonStyle 2 AllNormal Vector 5 40x40@1 60x40@1 60x60@0 40x60@0 40x40@1
+ButtonStyle 2 - MwmDecorMenu
+
+ButtonStyle 1 AllNormal Vector 17 20x20@1 30x20@1 50x40@1 70x20@1 80x20@1 80x30@0 60x50@0 80x70@1 80x80@0 70x80@0 50x60@0 30x80@0 20x80@0 20x70@0 40x50@1 20x30@0 20x20@1
+
+AddButtonStyle 3 AllUp Vector 5 25x25@1 25x75@1 75x75@0 75x25@0 25x25@1
+AddButtonStyle 3 AllDown Vector 5 25x25@0 25x75@0 75x75@1 75x25@1 25x25@0
+ButtonStyle 3 - MwmDecorMax
+
+AddButtonStyle 5 AllNormal Vector 5 25x40@1 25x60@1 75x60@0 75x40@0 25x40@1
+ButtonStyle 5 - MwmDecorMin
 
 ############
 # 7: Modules
