--- a/fvwm/.fvwm/config
+++ b/fvwm/.fvwm/config
@@ -55,11 +55,9 @@
 # actions that are run after a restart.
 DestroyFunc StartFunction
 AddToFunc   StartFunction
-#+ I Exec exec fvwm-root $[FVWM_USERDIR]/wallpaper.png
-#+ I Test (Init, f $[FVWM_USERDIR]/.BGdefault) \
-#    Exec exec fvwm-root $[FVWM_USERDIR]/.BGdefault
-#+ I TestRc (NoMatch) Exec exec fvwm-root \
-#    $[FVWM_DATADIR]/default-config/images/background/bg1.png
++ I Test (f $[HOME]/.fehbg) \
+    Exec exec $[HOME]/.fehbg
++ I TestRc (NoMatch) Exec exec feh --bg-fill $[FVWM_USERDIR]/wallpaper.png
 #+ I Test (Init) Module FvwmBanner
 #+ I Module FvwmButtons RightPanel
 #+ I Module FvwmEvent EventNewDesk
@@ -171,15 +169,15 @@ DesktopSize 2x2
 # for how long the mouse as at the edge before it scrolls.
 #
 # Set EdgeScroll 0 0 and/or EdgeResistance -1 to disable.
-EdgeScroll 100 100
-EdgeResistance 450
+EdgeScroll 0 0
+EdgeResistance -1
 EdgeThickness 1
-Style * EdgeMoveDelay 350, EdgeMoveResistance 350
+Style * EdgeMoveDelay 150, EdgeMoveResistance 150
 
 # EwmhBaseStruts [left] [right] [top] [bottom]
 # Reserves space along the edge(s) of the Screen that will not
 # be covered when maximizing or placing windows.
-EwmhBaseStruts 0 0 0 0
+EwmhBaseStruts 0 0 0 1
 
 # This sets the ClickTime and MoveThreshold used to determine
 # Double Clicks, Hold and Move for the mouse.
@@ -201,7 +199,7 @@ Style * MinOverlapPlacement, GrabFocusOff, !UsePPosition
 # Sets all windows to OpaqueMove (vs a wired frame) and  windows will
 # snap to each other and the edge of the screen.
 OpaqueMoveSize unlimited
-Style * ResizeOpaque, SnapAttraction 15 SameType ScreenAll, SnapGrid
+Style * ResizeOpaque, SnapAttraction 16 SameType, SnapGrid
 
 # Transient Windows (such as open file windows)
 Style * DecorateTransient, StackTransientParent
@@ -473,28 +471,28 @@ Silent Key F4 A C GotoDesk 0 3
 #   1 - Close on single click, Destroy on double click.
 #   3 - Maximize (right/middle button will only maximize vertical/horizontal)
 #   5 - Iconify (minimize)
-Mouse 1 2 A Menu MenuWindowOps Delete
-Mouse 1 1 A Close
+Mouse 1 1 A RaiseMoveX Move Close
 Mouse 1 3 A Maximize 100 100
 Mouse 2 3 A Maximize 100 0
 Mouse 3 3 A Maximize 0 100
 Mouse 1 5 A Thumbnail
 Mouse 3 5 A WindowShade toggle
+Mouse 1 2 A Menu MenuWindowOps Delete
 
 #   TitleBar: Click to Raise, Move, Double Click to Maximize
 #             Mouse Wheel Up/Down to WindowShade On/Off
 #   Borders: Click to raise, Move to Resize
 #   Root Window: Left Click - Main Menu
-#                Right Click - WindowOps Menu
-#                Middle Click - Window List Menu
+#                Middle Click - WindowOps Menu
+#                Right Click - Window List Menu
 #   Right click TitleBar/Borders for WindowOps Menu
 Mouse 1	T    A RaiseMoveX Move Maximize
 Mouse 1	FS   A RaiseMove Resize
 Mouse 4	T    A WindowShade True
 Mouse 5	T    A WindowShade False
 Mouse 1	R    A Menu MenuFvwmRoot
-Mouse 2	R    A WindowList
-Mouse 3	R    A Menu MenuWindowOpsLong
+Mouse 3	R    A WindowList
+Mouse 2	R    A Menu MenuWindowOpsLong
 Mouse 1	I    A RaiseMoveX Move "Iconify off"
 #Mouse 3	T    A Menu MenuWindowOps
 Mouse 3 T    A RaiseLower
@@ -513,17 +511,10 @@ Mouse 3 I    A Menu MenuIconOps
 TitleStyle Centered Height 24 -- flat
 ButtonStyle All - Clear
 
-ButtonStyle 1 AllUp Vector 17 25x25@1 35x25@1 50x40@1 65x25@1 75x25@1 75x35@0 60x50@0 75x65@1 75x75@0 65x75@0 50x60@0 35x75@0 25x75@0 25x65@0 40x50@1 25x35@0 25x25@1 -- Flat
-AddButtonStyle 1 AllDown Vector 17 25x25@0 35x25@0 50x40@0 65x25@0 75x25@0 75x35@1 60x50@1 75x65@0 75x75@1 65x75@1 50x60@1 35x75@1 25x75@1 25x65@1 40x50@0 25x35@1 25x25@0 -- Flat
-
-ButtonStyle 3 AllUp Vector 5 25x25@1 25x75@1 75x75@0 75x25@0 25x25@1 -- Flat
-AddButtonStyle 3 AllDown Vector 5 25x25@0 25x75@0 75x75@1 75x25@1 25x25@0 -- Flat
-
-ButtonStyle 5 AllUp Vector 5 25x50@1 25x75@1 75x75@0 75x50@0 25x50@1 -- Flat
-AddButtonStyle 5 AllDown Vector 5 25x50@0 25x75@0 75x75@1 75x50@1 25x50@0 -- Flat
-
-ButtonStyle 2 AllUp Vector 5 40x40@1 60x40@1 60x60@0 40x60@0 40x40@1 -- Flat
-AddButtonStyle 2 AllDown Vector 5 40x40@0 60x40@0 60x60@1 40x60@1 40x40@0 -- Flat
+ButtonStyle 1 AllNormal Pixmap $[FVWM_USERDIR]/close.png
+ButtonStyle 3 AllNormal Pixmap $[FVWM_USERDIR]/maximize.png
+ButtonStyle 5 AllNormal Pixmap $[FVWM_USERDIR]/minimize.png
+ButtonStyle 2 AllNormal Pixmap $[FVWM_USERDIR]/menu.png
 
 ############
 # 7: Modules
